# instrumented-soap

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tox.ini  version.txt
docs/: Makefile  api.rst  changes.rst  conf.py  index.rst  install.rst  make.bat
sandbox/: manage.py  settings.py  urls.py
sandbox/tests/: test_soap.py
soap/: __init__.py  http.py  settings.py  tests.py
src/soap/: __init__.py  http.py  settings.py  test.py
src/soap/tests/: __init__.py  test_soap.py
