[build-system]
requires = [ "poetry-core>=1.9.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "instrumented-soap"
version = "2.1.2-b2"
description = "Wrapper around suds-community that adds improved proxy support and testing tools."
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/instrumented-soap"
repository = "https://gitlab.com/thelabnyc/instrumented-soap"
license = "ISC"

[[tool.poetry.packages]]
include = "soap"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.2"
suds-community = ">=1.1.2"
requests = ">=2.32.3"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.1.0"
tox = ">=4.16.0"
sphinx = ">=7.4.7"
sphinx-rtd-theme = ">=2.0.0"
