[build-system]
requires = [ "poetry-core>=1.9.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "instrumented-soap"
version = "2.1.2"
description = "Wrapper around suds-community that adds improved proxy support and testing tools."
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/instrumented-soap"
repository = "https://gitlab.com/thelabnyc/instrumented-soap"
license = "ISC"

[[tool.poetry.packages]]
include = "soap"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.2"
suds-community = ">=1.2.0"
requests = ">=2.32.3"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.1.1"
tox = ">=4.18.0"
sphinx = ">=7.4.7"
sphinx-rtd-theme = ">=2.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]
